--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Don't upload the following files to GitHub:
+archive.zip
+movies_metadata.csv
+ratings.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
